<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="60dp"
        android:text="@string/newAppoiment"
        android:textColor="#FFEBEE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="80dp"
        android:text="@string/price_view"
        android:textColor="#FFEBEE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="292dp"
        android:text="@string/help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>